# ahc-template

./: .gitignore  AGENTS.md  Cargo.toml  cargo-generate.toml  mise.toml  pahcer_config.toml  pyproject.toml  single.py
.agents/skills/atcoder-problem-md/: SKILL.md
.agents/skills/atcoder-problem-md/agents/: openai.yaml
.agents/skills/atcoder-problem-md/scripts/: extract_atcoder_problem_md.py
src/: diagnostics.rs  grid.rs  main.rs  random.rs
